# msvc_but_repro

./: CMakeLists.txt  CMakeSettings.json  Main.cpp  README.md
.github/workflows/: ci.yml
workflows/: ci.yml
